{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"1"}

--- a/_example-folder/collection.yml
+++ b/_example-folder/collection.yml
@@ -2,6 +2,7 @@ collections:
   example-folder:
     output: true
     order:
+      - H@ola.md
       - First Page.md
       - folder-page.md
       - example-subfolder/.keep
