--- a/_example-folder/collection.yml
+++ b/_example-folder/collection.yml
@@ -2,6 +2,7 @@ collections:
   example-folder:
     output: true
     order:
+      - PageSettings###Modal.md
       - H@ola.md
       - First Page.md
       - folder-page.md
