--- a/_example-folder/collection.yml
+++ b/_example-folder/collection.yml
@@ -2,6 +2,7 @@ collections:
   example-folder:
     output: true
     order:
+      - Sample Folder/Example Title.md
       - Sample Folder/.keep
       - PageSettings###Modal.md
       - H@ola.md
