{"message":"Update file: navigation.yml","fileName":"navigation.yml","userId":"1"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,3 +8,5 @@ links:
     collection: example-folder
   - title: Top Level Folder
     collection: top-level-folder
+  - title: Menu Title
+    resource_room: true
