{"message":"Update file: navigation.yml","fileName":"navigation.yml","userId":"1"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,3 +10,8 @@ links:
     collection: top-level-folder
   - title: Menu Title
     resource_room: true
+  - title: Menu Title
+    url: /permalink
+    sublinks:
+      - title: Submenu Title
+        url: /permalink
